Product Menagnment (#4)
* Product controller initial

* Products menagnment

* Extended seeder, refactored controller

* Added paginations for fetch

---------
