# app/Http/Resources/ProductResource.php
@@ -14,6 +14,19 @@ class ProductResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->resource->id,
+            'name' => $this->resource->name,
+            'description' => $this->resource->description,
+            'price' => (float) $this->resource->price,
+            'quantity' => $this->resource->quantity,
+            'sku' => $this->resource->sku,
+            'category_id' => $this->resource->category_id,
+            'brand_id' => $this->resource->brand_id,
+            'specs' => $this->resource->specs,
+            'is_active' => $this->resource->is_active,
+            'created_at' => $this->resource->created_at,
+            'updated_at' => $this->resource->updated_at,
+        ];
     }
 }
